cabal-version:       2.2

name:                libBF
version:             0.1.0.0
synopsis:            A binding to the libBF library.
description:         LibBF is a C library fow working with arbitray precision
                     IEEE 754 floating point numbers.
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     LibBF,
                       LibBF.Opts,
                       LibBF.Mutable
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  build-tools:         hsc2hs
  include-dirs:        libBF
  includes:            libBF/libbf.h
  c-sources:           libBF/cutils.c
                       libBF/libbf.c
                       libBF/libbf-hs.c
  ghc-options:         -Wall
  default-language:    Haskell2010

executable test-bf
  build-depends: base, libBF
  hs-source-dirs: exe
  main-is: Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
